# skylark

./: .buckconfig  .gitignore  BUCK  Cargo.toml  TODO.md  calc  dama.toml  log2.txt  tmp-dama.txt  tmp-ws.txt
crates/: README.md
crates/lib/devtools/: README.md
crates/lib/devtools/syntaxgen/src/: input.rs  main.rs
crates/lib/inkwell_build/: BUCK  Cargo.toml
crates/lib/inkwell_build/src/: lib.rs
crates/lib/sky_lexer/: Cargo.toml
crates/lib/sky_syntax/: BUCK
crates/lib/sky_syntax/src/: event.rs  lang.rs  lexer.rs  lib.rs  logging.rs  parser.rs  parsing.rs  syntax_error.rs  syntax_tree.rs  text_token_source.rs  token_set.rs
crates/lib/sky_syntax/src/ast/ext/: kinds.rs  mod.rs  nodes.rs
crates/lib/sky_syntax/src/parsing/: text_tree_sink.rs
crates/lib/sky_syntax/syntaxgen/: Cargo.toml
crates/lib/sky_syntax/syntaxgen/src/: kinds.rs  nodes.rs
crates/lib/sky_syntax/syntaxgen/src/grammar/: starlark.reference
crates/lib/sky_syntax/tests/: lib.rs  token_set.rs
crates/lib/skylark/: README.md
crates/lib/skylark/sky_lexer/src/: lib.rs
crates/lib/skylark/sky_parser/: Cargo.toml
crates/lib/skylark/sky_parser/src/: lib.rs
crates/lib/skylark/sky_syntax/: BUCK  Cargo.toml
crates/lib/skylark/sky_syntax/src/: event.rs  lang.rs  lexer.rs  lib.rs  logging.rs  parser.rs  parsing.rs  syntax_tree.rs  text_token_source.rs  token_set.rs
crates/lib/skylark/sky_syntax/src/ast/: mod.rs  traits.rs
crates/lib/skylark/sky_syntax/src/ast/ext/: kinds.rs  nodes.rs
crates/lib/skylark/sky_syntax/src/grammar/: comprehension.rs  decl.rs  expr.rs  mod.rs  statements.rs
crates/lib/skylark/sky_syntax/src/parsing/: text_token_source.rs  text_tree_sink.rs
crates/lib/skylark/sky_syntax/syntaxgen/src/: main.rs  tokens.rs
crates/lib/skylark/sky_syntax/syntaxgen/src/grammar/: starlark.ungram
crates/lib/skylark/sky_syntax/tests/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  buck2.md  syntaxgen.md
docs/src/build_system/: ci.md  index.md
docs/src/devtools/: buckaroo.md  rudolph.md
docs/src/skylark/: buckaroo.md  index.md  sky_analyzer.md  sky_interpreter.md  sky_lexer.md  sky_parser.md
test_data/: add.bzl  div.bzl  mul.bzl  sub.bzl
tools/buck2/toolchains/: BUCK
